pongo script dentro del body

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         
 <footer class="pie de pagina">Proyect By Diego Costa</footer>
 
-
+<script src="./1entregaProyecto.js"></script>
 </body>
-<script src="/1entregaProyecto.js"></script>
+
 </html>
