Coloco imagen y muestro nombre del objeto encontrado en BUSCAR

--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
     <nav>        
         <div class="containerNav">
             <div class="menu">
-        <ul class = lista>           
+        <ul  class = lista>           
             <li><button onclick="iCompuesto()">Calcular IC</button></li>         
             <li><button onclick="gRiesgo()">Riesgo</button></li>    
-            <li><button onclick="crearPerfil()">Crear Perfil</button></li>              
+            <li><button onclick="crearPerfil()">Crear Perfil</button></li>            
         </ul>
             </div>        
         
     </nav>
 
 
-        <div class = valores></div>
+
+        <div id= containerValores class = valores></div>
 
         <div class =containerFotos>
             <div id="fotoUno"></div>
