--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
         
         <div id= containerValores class = valores>
             <div id = formDiv class = formDiv>
-                <form id="formPerfil">
-                    <input id="nombre"  placeholder="nombre">
-                    <input id="apellido" placeholder="apellido">
-                    <input id="tipoPerfil" placeholder="tipoPerfil ">
-                    <input id="monto" placeholder="monto">                
+                <form id="formPerfil" class = "formPerfil">
+                    <input class= form id="nombre"  placeholder="nombre">
+                    <input class=" form" id="apellido" placeholder="apellido">
+                    <input class= form id="tipoPerfil" placeholder="tipoPerfil ">
+                    <input class= form id="monto" placeholder="monto">                
                 </form>        
-                <button class="input" id="buttonAccept">Aceptar</button> 
+                <button  class="input" id="buttonAccept">Aceptar</button> 
             </div>   
-            <button id="bCreateForm">Crear Perfil</button>
-            <button id="bDeleteForm">Borrar Perfil</button>              
+            <!-- <button id="bCreateForm">Crear Perfil</button>
+            <button id="bDeleteForm">Borrar Perfil</button>               -->
             </div>
             <div>               
              
